dockerize database and api

--- a/api/.env
+++ b/api/.env
@@ -2,7 +2,7 @@
 DB_NAME = "devbook"
 ROL_NAME = "postgres"
 ROL_PASSWORD = "postgres"
-DB_HOST = "localhost"
+DB_HOST = "db"
 DB_PORT = "5432"
 
 # Variáveis de ambiente do servidor
