Update some configurations to improve the docker experience

--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,4 @@
-# Variáveis de ambiente de Base de dados
+# Variáveis de ambiente da Base de dados
 DB_NAME = "devbook"
 ROL_NAME = "postgres"
 ROL_PASSWORD = "postgres"
